@@ -1,3 +1,8 @@
+Thu Feb 15 21:30:26 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* function.c (assign_parms): Set RTX_UNCHANGING_P in pseudo when we
+	do in memory.
+
 2001-02-15  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* version.c: Bump to "3.0 20010215 (prerelease)".
